--- a/public/app/views/pages/placeOrder.html
+++ b/public/app/views/pages/placeOrder.html
@@ -1,13 +1,13 @@
 <div class="container marketing" style="background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);">
-    <div class="row">
+    <div class="row orderrow">
         <div class="col-md-2 text-center" >
-            <h2 style="text-align: center;">Taco <br> Menu <br>TodaySpecials<br> --->>></h2>
+            <h2 style="font-size: x-large; text-align: center;">Taco <br> Menu <br>TodaySpecials<br> --->>></h2>
         </div>
         <div class="col-md-2 text-center" >
-            <div class="card shop-items" >
+            <div class="card shop-items img-responsive" >
                 <div class="shop-item">
                     <h2>
-                    <span class="shop-item-title">Flamin Hot Doritos Locos Tacos</span>
+                    <span class=shop-item-title>Flamin Hot Doritos Locos Tacos</span>
                     </h2>
                     <div class="shop-item-details">
                         <span class="shop-item-price">$1.89</span>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Triplelupa</span>
@@ -69,7 +69,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Triplelupa</span>
@@ -103,7 +103,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Triplelupa</span>
@@ -139,10 +139,9 @@
     </div>
     <div class="row">
         <div class="col-md-2 text-center">
-            
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Nacho Cheese Doritos Locos Taco</span>
@@ -174,7 +173,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Cheesy Gordita Crunch</span>
@@ -207,7 +206,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Chalupa Supreme</span>
@@ -241,7 +240,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Crunchwrap Supreme</span>
@@ -276,10 +275,11 @@
     </div>
     <div class="row">
         <div class="col-md-2 text-center" >
-            <h2 style="text-align: center;">Drinks <br> Menu <br> --->>></h2>
+            
+                <h2 style="font-size: x-large; text-align: center;">Drinks <br> Menu <br> --->>></h2> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Pineapple Whip Freeze</span>
@@ -313,7 +313,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Regular Iced Coffee</span>
@@ -347,7 +347,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Tropicanna Pink Lemonade</span>
@@ -381,7 +381,7 @@
             </div> 
         </div>
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Mountain Dew Baja Blast Freeze</span>
@@ -416,125 +416,13 @@
         
     </div>
 
-    
     <div class="row">
-        <div class="col-md-2 text-center" >
-            <h2 style="text-align: center;">Sides <br> Menu <br> --->>></h2>
+        <div class="col-md-2 text-center" >      
+                <h2 style="font-size: x-large; text-align: center;">Sweets <br> Menu <br> --->>></h2>
         </div>
 
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
-                <div class="shop-item">
-                    <h2>
-                    <span class="shop-item-title">Cheese Roll Up</span>
-                    </h2>
-                    <br>
-                    <br>
-                    <br>
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$1.00</span>
-                        <br>
-                        <label class="quantity" for="qty">Quantity</label>
-                        <br>
-                        <div class="space">
-                            <select class="shop-item-qty" name="qty" id="qty"> 
-                            <option value="none" selected disabled hidden> 
-                                Select an qty 
-                            </option> 
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            </select> 
-                        </div>
-                        <br>
-                        <br>
-                        <br>
-                        <button class="btn btn-success shop-item-button" type="button">ADD TO CART</button>
-                    </div>
-                </div>
-            </div> 
-        </div>
-
-        <div class="col-md-2 text-center">
-            <div class="card shop-items">
-                <div class="shop-item">
-                    <h2>
-                    <span class="shop-item-title">Chips and Nacho Cheese Sauce</span>
-                    </h2>
-                    <br>
-                    
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$1.69</span>
-                        <br>
-                        <label class="quantity" for="qty">Quantity</label>
-                        <br>
-                        <div class="space">
-                            <select class="shop-item-qty" name="qty" id="qty"> 
-                            <option value="none" selected disabled hidden> 
-                                Select an qty 
-                            </option> 
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            </select> 
-                        </div>
-                        <br>
-                        <br>
-                        <br>
-                        <button class="btn btn-success shop-item-button" type="button">ADD TO CART</button>
-                    </div>
-                </div>
-            </div> 
-        </div>
-
-        
-        <div class="col-md-2 text-center">
-            <div class="card shop-items">
-                <div class="shop-item">
-                    <h2>
-                    <span class="shop-item-title">Chips and Guacamole</span>
-                    </h2>
-                    
-                    <br>
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$1.59</span>
-                        <br>
-                        <label class="quantity" for="qty">Quantity</label>
-                        <br>
-                        <div class="space">
-                            <select class="shop-item-qty" name="qty" id="qty"> 
-                            <option value="none" selected disabled hidden> 
-                                Select an qty 
-                            </option> 
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            </select> 
-                        </div>
-                        <br>
-                        <br>
-                        <br>
-                        <button class="btn btn-success shop-item-button" type="button">ADD TO CART</button>
-                    </div>
-                </div>
-            </div> 
-        </div>
-
-    </div>
-
-    <div class="row">
-        <div class="col-md-2 text-center" >
-            <h2 style="text-align: center;">Sweets <br> Menu <br> --->>></h2>
-        </div>
-
-        <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Cinnamon Twists</span>
@@ -569,7 +457,7 @@
         </div>
 
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Cinnabon Delights(2)</span>
@@ -604,7 +492,7 @@
 
         
         <div class="col-md-2 text-center">
-            <div class="card shop-items">
+            <div class="card shop-items img-responsive">
                 <div class="shop-item">
                     <h2>
                     <span class="shop-item-title">Cinnabon Delights(12)</span>
