--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -174,6 +174,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/jquery-3.1.1.min.js"></script>
     <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/angular.min.js"></script>
 </body>
 
 </html>
