replacing the overwritten place order styles

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -23,6 +23,7 @@
     <script src="app/controllers/mainCtrl.js"></script>
     <script src="app/controllers/cartCtrl.js"></script>
     <script src="app/controllers/formCtrl.js"></script>
+    <script src="app/controllers/paymentCtrl.js"></script>
 
     <!-- Angular services -->
     <script src="app/services/userServices.js"></script>
