adding media queries

--- a/public/app/views/pages/checkout.html
+++ b/public/app/views/pages/checkout.html
@@ -78,7 +78,7 @@
   
         <!--2nd option = Delivery option form--> 
         
-        <section class="Delivery__grid">
+        <section class="Delivery__grid" style="padding: 0px;">
   
           <form class="c_form" ng-submit="main.doPay(payData);">
            
