style section padding changed

--- a/public/app/views/pages/about.html
+++ b/public/app/views/pages/about.html
@@ -1,6 +1,6 @@
 
 <div class="box">
-  
+  <!-- Displayed 3 cards in a single row -->
     <div class="card">
       <div class="imgBx">
           <img src="assets/images/Likhitha.jpg" alt="images">
