--- a/public/app/views/pages/hireMe.html
+++ b/public/app/views/pages/hireMe.html
@@ -39,7 +39,7 @@
       </div>
 
       <textarea class="form-control" rows="5" placeholder="ENTER YOUR ADDRESS"
-       name="streetAddress" ng-model = "form.hiremeData.text" required></textarea>
+       name="streetAddress" ng-model = "form.hiremeData.address" required></textarea>
       
       <button class="btn btn-primary send-button" id="submit" type="submit"  value="SEND">
         <div class="button">
@@ -54,7 +54,7 @@
       <ul class="contact-list">
       <div class="item">
         <label for="bdate">Date of Birth<span>*</span></label>
-            <input id="bdate" type="date" name="bdate" required/>
+            <input id="bdate" type="date" name="date" required/>
             <i class="fas fa-calendar-alt"></i>
         </div>
       <br>
