--- a/public/app/views/pages/privacyPolicy.html
+++ b/public/app/views/pages/privacyPolicy.html
@@ -1,23 +1,33 @@
 <div  style="background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);">
   
-        <h1>Privacy Policy</h1>
-    <p>Last modified: August 1, 2020</p>  
+    <h1>Privacy Policy</h1>
+<p>Last modified: August 1, 2020</p>  
 
- <div class="privacy">
-<p>La Taco® (“La Taco,” “we,” “our,” or “us”) is committed to protecting your privacy. This La Taco Privacy Policy (this “Policy”) applies to our websites, online experiences that link to this Policy (collectively, our “Sites”), and describes how we collect, use and disclose your personal information when you visit our Sites or our US restaurants and in-store kiosks, or otherwise engage with us (collectively, our “Service”).
+<div class="privacy">
+<p>La Taco® (“La Taco,” “we,” “our,” or “us”) is committed to protecting your privacy. This La Taco Privacy
+Policy (this “Policy”) applies to our websites, online experiences that link to this Policy (collectively,
+our “Sites”), and describes how we collect, use and disclose your personal information when you visit our Sites or our US restaurants and in-store kiosks, or otherwise engage with us (collectively, our “Service”).
 By accessing or using our Service, you signify that you have read, understood, and agree to our collection, storage, use, and disclosure of your personal information as described in this Policy and our Terms of Service.</p>
 <br>
 <br>
 
 <h4>
-    Information you provide:
+Information you provide:
 </h4>
 <ul>
-    <li>Contact and profile information. We may collect personal information, such as your name, phone number, address, business information, gender, age, postal/zip code, address, and e-mail address, when you register for our Service, place an order for delivery, sign up for our mailing list, enter a contest, participate in an offer or loyalty program, redeem or participate in a promotion, enter a contest or sweepstakes, purchase or redeem a gift card, or otherwise communicate or interact with us. We use this information to create, verify and personalize your account, to fulfill your request or transaction, to communicate with you directly, and to send you marketing communications in accordance with your preferences.</li>
-    <br>
-    <li>Payment and transaction information. We may collect information such as items purchased, date and time of your transaction, amount purchased, whether you used a particular coupon or deal, and payment information, such as your credit/debit card or gift card or loyalty program details, when you make an in-store or online purchase. We use this information to fulfill your order and complete your transaction, update your rewards, detect and prevent fraud, and to inform our advertising and marketing.</li>
-    <br>
-    <li>Comments, chat and opinions. When you contact us directly (e.g., by email, phone, mail or by completing an online form or participating in online chat), we may record your comments and opinions. We may also record comments and opinions you express when responding to surveys, entering a sweepstakes or taking part in a promotion. We use this information to respond to your question or comment, to evaluate and improve our products and services and to inform our marketing and advertising activities.</li>
+<li>Contact and profile information. We may collect personal information, such as your name, phone number, 
+    address, business information, gender, age, postal/zip code, address, and e-mail address, when you 
+    register for our Service, place an order for delivery, sign up for our mailing list, enter a contest, 
+    participate in an offer or loyalty program, redeem or participate in a promotion, enter a contest or 
+    sweepstakes, purchase or redeem a gift card, or otherwise communicate or interact with us. We use this 
+    information to create, verify and personalize your account, to fulfill your request or transaction, 
+    to communicate with you directly, and to send you marketing communications in accordance with your 
+    preferences.
+</li>
+<br>
+<li>Payment and transaction information. We may collect information such as items purchased, date and time of your transaction, amount purchased, whether you used a particular coupon or deal, and payment information, such as your credit/debit card or gift card or loyalty program details, when you make an in-store or online purchase. We use this information to fulfill your order and complete your transaction, update your rewards, detect and prevent fraud, and to inform our advertising and marketing.</li>
+<br>
+<li>Comments, chat and opinions. When you contact us directly (e.g., by email, phone, mail or by completing an online form or participating in online chat), we may record your comments and opinions. We may also record comments and opinions you express when responding to surveys, entering a sweepstakes or taking part in a promotion. We use this information to respond to your question or comment, to evaluate and improve our products and services and to inform our marketing and advertising activities.</li>
 
 </ul>
 <br>
@@ -27,13 +37,13 @@ By accessing or using our Service, you signify that you have read, understood, a
 
 <ul>
 
-    <li>Location information. We may collect information about your location if you provide your address or postal/zip code or we may approximate your location based on your IP address. If you provide our mobile applications access to location services on your device, we and our third party providers may collect location data through GPS, Wi-Fi, wireless network triangulation or other similar methods. We may use your location information to provide personalized content and advertising, to enhance your shopping and dining experience, to allow you to view deals and products available to you based on your location, to assist us with analytics such as foot traffic measurement, and to improve the effectiveness of our websites, restaurants, mobile applications, merchandise, advertising, and customer service. We may also use your location information to provide you with more information regarding events, personalized offers regarding products, services, or other opportunities, and notifications via social media which may interest you. We may also use the Google Maps Application Programming Interface to gather information about your location. Google uses various technologies to determine your location, including your IP address, GPS, and other sensors that may, for example, provide Google with information on nearby devices, Wi-Fi access points, and cell towers (see Google Maps privacy policy to learn more).</li>
-     <br>
-    <li>Information you may post or submit to our Sites. We may collect information about how you use and interact with our Sites and our Service, including any content you post to the Service. If you share photos and video from a mobile device, we will access your device camera roll and camera with your permission as needed to post your content. If you need to update your permissions, you can do so in the “Settings” app of your device.</li>
-    <br>
-    <li>Address Book information. With your permission, we may access your contact list available on your mobile device or your email accounts, or you may choose to provide your friends’ contact information manually, so that you can send invitations or special content to your friends. When communicating with your friends, we may include your name and photo in order to let them know that you are the person extending the invitation or sending the message. With your permission, we may also send reminder emails to your friends on your behalf, which may also include your name and photo, and enable you to send invitations to your friends via email or SMS/text. We may retain your friends’ email addresses to let you know when the recipient received a gift card or other communication from us.</li>
+<li>Location information. We may collect information about your location if you provide your address or postal/zip code or we may approximate your location based on your IP address. If you provide our mobile applications access to location services on your device, we and our third party providers may collect location data through GPS, Wi-Fi, wireless network triangulation or other similar methods. We may use your location information to provide personalized content and advertising, to enhance your shopping and dining experience, to allow you to view deals and products available to you based on your location, to assist us with analytics such as foot traffic measurement, and to improve the effectiveness of our websites, restaurants, mobile applications, merchandise, advertising, and customer service. We may also use your location information to provide you with more information regarding events, personalized offers regarding products, services, or other opportunities, and notifications via social media which may interest you. We may also use the Google Maps Application Programming Interface to gather information about your location. Google uses various technologies to determine your location, including your IP address, GPS, and other sensors that may, for example, provide Google with information on nearby devices, Wi-Fi access points, and cell towers (see Google Maps privacy policy to learn more).</li>
+ <br>
+<li>Information you may post or submit to our Sites. We may collect information about how you use and interact with our Sites and our Service, including any content you post to the Service. If you share photos and video from a mobile device, we will access your device camera roll and camera with your permission as needed to post your content. If you need to update your permissions, you can do so in the “Settings” app of your device.</li>
+<br>
+<li>Address Book information. With your permission, we may access your contact list available on your mobile device or your email accounts, or you may choose to provide your friends’ contact information manually, so that you can send invitations or special content to your friends. When communicating with your friends, we may include your name and photo in order to let them know that you are the person extending the invitation or sending the message. With your permission, we may also send reminder emails to your friends on your behalf, which may also include your name and photo, and enable you to send invitations to your friends via email or SMS/text. We may retain your friends’ email addresses to let you know when the recipient received a gift card or other communication from us.</li>
 </ul>
 
-    </div>
-  
+</div>
+
 </div>
