--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -1,34 +1,34 @@
 <section id="contact">
-<div class="user">
-    
-    <h2>User Login</h2>
-    <div class="jumbotron text-center" ng-show="main.loading">
-    <p>Loading</p>
+    <div class="user">
+        
+        <h2>User Login</h2>
+        <div class="jumbotron text-center" ng-show="main.loading">
+        <p>Loading</p>
+        </div>
+        
+        <div class="row show-hide-message" ng-show ="main.successFlag">
+            <div class="alert alert-success">{{main.successMsg}}</div>
+        </div>
+        <br>
+        <div class="row show-hide-message" ng-show ="main.errorFlag">
+            <div class="alert alert-danger">{{main.errorMsg}}</div>
+        </div>
+        
+        <div class="contact-wrapper">
+            <form class = "form" ng-submit="main.doLogin(loginData)">
+                <label>Username </label>
+                <div class="form__group">
+                    <input class="form-control" type="text" name="username" ng-model = "main.loginData.username">
+                </div>
+                <br>
+                <label>Password </label>
+                <div class="form__group">
+                <input class="form-control" type="password" name="password" ng-model = "main.loginData.password">
+                </div>
+                <br>
+                <button class="btn btn-primary" type="submit">Login</button>
+            </form>
+        </div>
+        
     </div>
-    
-    <div class="row show-hide-message" ng-show ="main.successMsg">
-        <div class="alert alert-success">{{main.successMsg}}</div>
-    </div>
-    <br>
-    <div class="row show-hide-message" ng-show ="main.errorMsg">
-        <div class="alert alert-danger">{{main.errorMsg}}</div>
-    </div>
-    
-    <div class="contact-wrapper">
-        <form class = "form" ng-submit="main.doLogin(loginData)">
-            <label>Username </label>
-            <div class="form__group">
-                <input class="form-control" type="text" name="username" ng-model = "main.loginData.username">
-            </div>
-            <br>
-            <label>Password </label>
-            <div class="form__group">
-            <input class="form-control" type="password" name="password" ng-model = "main.loginData.password">
-            </div>
-            <br>
-            <button class="btn btn-primary" type="submit">Login</button>
-        </form>
-    </div>
-    
-</div>
-</section>
+    </section>
