--- a/public/app/views/pages/users/register.html
+++ b/public/app/views/pages/users/register.html
@@ -1,34 +1,35 @@
 <section id="contact">
-<div class="user">
-
-<h2>User Registration</h2>
-
-<div class="jumbotron text-center" ng-show="register.loading">
-<p>Loading</p>
-</div>
-
-<div class="row show-hide-message" ng-show ="register.successMsg">
-    <div class="alert alert-success">{{register.successMsg}}</div>
-</div>
-<br>
-<div class="row show-hide-message" ng-show ="register.errorMsg">
-    <div class="alert alert-danger">{{register.errorMsg}}</div>
-</div>
-
-<div>
-    <form ng-submit="register.regUser(regData);">
-        <label>Email </label>
-        <input class="form-control" type="email" name="email" ng-model = "register.regData.email">
-        <br>
-        <label>Username </label>
-        <input class="form-control" type="text" name="username" ng-model = "register.regData.username">
-        <br>
-        <label>Password </label>
-        <input class="form-control" type="password" name="password" ng-model = "register.regData.password">
-        <br>
-        <button class="btn btn-primary" type="submit">Register</button>
-    </form>
-</div>
-</div>
-</section>
-
+    <div class="user">
+    
+    <h2>User Registration</h2>
+    
+    <div class="jumbotron text-center" ng-show="register.loading">
+    <p>Loading</p>
+    </div>
+    
+    <div class="row show-hide-message" ng-show ="register.successFlag">
+        <div class="alert alert-success">{{register.successMsg}}</div>
+    </div>
+    <br>
+    <div class="row show-hide-message" ng-show ="register.errorFlag">
+        <div class="alert alert-danger">{{register.errorMsg}}</div>
+    </div>
+    
+    <div>
+        <form ng-submit="register.regUser(regData);">
+            <label>Email </label>
+            <input class="form-control" type="email" name="email" ng-model = "register.regData.email">
+            <br>
+            <label>Username </label>
+            <input class="form-control" type="text" name="username" ng-model = "register.regData.username">
+            <br>
+            <label>Password </label>
+            <input class="form-control" type="password" name="password" ng-model = "register.regData.password">
+            <br>
+            <button class="btn btn-primary" type="submit">Register</button>
+        </form>
+    </div>
+    </div>
+    </section>
+    
+    
