--- a/public/app/views/pages/tacos.html
+++ b/public/app/views/pages/tacos.html
@@ -1,6 +1,7 @@
 <div class="container marketing" style="background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);">
 <div class="row">
         <div class="col-md-4 text-center" >
+            <img src="../../assets/images/Crunchy Taco-4.jpg" alt="Avatar">
             <footer>
                 <h2>Flamin Hot Doritos Locos Tacos</h2>
                 <h4>$1.89</h4>
