hire me style changes

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -97,7 +97,7 @@
                     </li>
 
                     <li class="ngnav nav1">
-                        <a ng-show="!main.isLoggedIn" class="page-scroll" href="/contact">Contact Us</a>
+                        <a ng-show="main.isLoggedIn" class="page-scroll" href="/contact">Contact Us</a>
                     </li>
                     
                     <li class="ngnav nav2">
