image hover text added

--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -16,37 +16,37 @@
   <div class="row">
     <div class="col-md-4 text-center">
       <h2 >Today Specials</h2>
-      <img class="img-circle" src="../../assets/images/BreakfastTaco.jpg" height="140px" width="140px">
+      <img class="img-circle" src="../../assets/images/BreakfastTaco.jpg" height="140px" width="140px" title="Today Special Taco">
       <p>Ground chicken taco with our favourite cheese, sweet tomatoes, onion and pickle toppings</p>
     </div>
     <div class="col-md-4 text-center">
       <h2 >Dressings you will love</h2>
-      <img class="img-circle" src="../../assets/images/dressing.jpeg" height="140px" width="140px">
+      <img class="img-circle" src="../../assets/images/dressing.jpeg" height="140px" width="140px" title="Dressings">
       <p>Avocado lime dressing that will make your taste buds dance</p>
     </div>
     <div class="col-md-4 text-center">
       <h2 >Low Calorie Taco</h2>
-      <img class="img-circle" src="../../assets/images/easyTaco.jpg" height="140px" width="140px">
+      <img class="img-circle" src="../../assets/images/easyTaco.jpg" height="140px" width="140px" title="Low calorie Taco">
       <p>Our Special taco for amazing customers on diet</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-4 text-center">
       <h2 >Signature Taco</h2>
-      <img class="img-circle" src="../../assets/images/chickenTaco.jpg" height="140px" width="140px">
+      <img class="img-circle" src="../../assets/images/chickenTaco.jpg" height="140px" width="140px" title="Signature Taco">
       <h2 >Ground Chicken Taco</h2>
       <p>Ground chicken taco with our favourite cheese, sweet tomatoes, onion and pickle toppings</p>
     </div>
     <div class="col-md-4 text-center">
       <h2 >Specialities</h2>
-      <img class="img-circle" src="../../assets/images/Quess.jpg" height="140px" width="140px">
+      <img class="img-circle" src="../../assets/images/Quess.jpg" height="140px" width="140px" title="Specialities">
       <h2 >Chicken Quesadilla</h2>
       <p>Combination of Monterey jack and cheddar with grilled chicken and caramelized onions</p>
     </div>
     <div class="col-md-4 text-center">
       <h2 >Unlimited Toppings</h2>
-      <img class="img-circle" src="../../assets/images/salsa.jpg" height="140px" width="140px">
+      <img class="img-circle" src="../../assets/images/salsa.jpg" height="140px" width="140px" title="Toppings">
       <p>Our Special corn salsa with pickled onlions and apple cider vinegar</p>
     </div>
-  </div>
+  </div>  
 </div>
