--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="/hireMe">Hire Me</a>
+                        <li><a ng-show="main.isLoggedIn" href="/hireMe">Hire Me</a>
                         </li>
                         <li><a href="/faq">FAQ</a>
                         </li>
